refactored for use of URI