@@ -14,24 +14,30 @@ package org.cups4j.operations.ipp;
  * the GNU Lesser General Public License along with this program; if not, see
  * <http://www.gnu.org/licenses/>.
  */
-import java.io.UnsupportedEncodingException;
-import java.net.URL;
-import java.nio.ByteBuffer;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.Map;
 
+import ch.ethz.vppserver.ippclient.IppResult;
+import ch.ethz.vppserver.ippclient.IppTag;
 import org.cups4j.CupsAuthentication;
 import org.cups4j.JobStateEnum;
 import org.cups4j.PrintJobAttributes;
 import org.cups4j.ipp.attributes.Attribute;
 import org.cups4j.ipp.attributes.AttributeGroup;
 import org.cups4j.operations.IppOperation;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import ch.ethz.vppserver.ippclient.IppResult;
-import ch.ethz.vppserver.ippclient.IppTag;
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.net.URI;
+import java.net.URL;
+import java.nio.ByteBuffer;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.Map;
 
 public class IppGetJobAttributesOperation extends IppOperation {
+
+  private static final Logger log = LoggerFactory.getLogger(IppGetJobAttributesOperation.class);
 
   public IppGetJobAttributesOperation() {
     operationID = 0x0009;
@@ -100,28 +106,52 @@ public class IppGetJobAttributesOperation extends IppOperation {
     return ippBuf;
   }
 
-  public PrintJobAttributes getPrintJobAttributes(String hostname, String userName, 
-		  int port, int jobID, CupsAuthentication creds) throws Exception {
-    PrintJobAttributes job = null;
+  /**
+   * Returns the job attributes of the given printer.
+   *
+   * @param hostname hostname of CUPS server
+   * @param userName user  name
+   * @param port     port of CUPS server
+   * @param jobID    job id
+   * @param creds    credentials
+   * @return job attributes
+   * @throws IOException in case of I/O problems
+   * @deprecated use {@link #getPrintJobAttributes(URI, String, int, CupsAuthentication)}
+   */
+  @Deprecated
+  public PrintJobAttributes getPrintJobAttributes(String hostname, String userName,
+                                                  int port, int jobID, CupsAuthentication creds) throws IOException {
+    return getPrintJobAttributes(URI.create("http://" + hostname + ":" + port), userName, jobID, creds);
+  }
 
+  /**
+   * Returns the job attributes of the given printer.
+   *
+   * @param printerURI URI of the printer
+   * @param userName   user  name
+   * @param jobID      job id
+   * @param creds      credentials
+   * @return job attributes
+   * @throws IOException in case of I/O problems
+   * @since 0.8 (oboehm)
+   */
+  public PrintJobAttributes getPrintJobAttributes(URI printerURI, String userName,
+                                                  int jobID, CupsAuthentication creds) throws IOException {
+    URI jobURI = URI.create(printerURI.getScheme() + "://" + printerURI.getAuthority() + "/jobs/" + jobID);
     Map<String, String> map = new HashMap<String, String>();
     // map.put("requested-attributes",
     // "page-ranges print-quality sides job-uri job-id job-state job-printer-uri job-name job-originating-user-name job-k-octets time-at-creation time-at-processing time-at-completed job-media-sheets-completed");
-
     map.put("requested-attributes", "all");
     map.put("requesting-user-name", userName);
-    IppResult result = request(null, new URL("http://" + hostname + "/jobs/" + jobID), map, creds);
-
+    IppResult result = request(null, jobURI.toURL(), map, creds);
+    log.debug("{} was requested with user '{}' and returns {}.", jobURI, userName, result);
     // IppResultPrinter.print(result);
+    PrintJobAttributes job = new PrintJobAttributes();
     for (AttributeGroup group : result.getAttributeGroupList()) {
       if ("job-attributes-tag".equals(group.getTagName()) || "unassigned".equals(group.getTagName())) {
-        if (job == null) {
-          job = new PrintJobAttributes();
-        }
         for (Attribute attr : group.getAttribute()) {
           if (attr.getAttributeValue() != null && !attr.getAttributeValue().isEmpty()) {
             String attValue = getAttributeValue(attr);
-
             if ("job-uri".equals(attr.getName())) {
               job.setJobURL(new URL(attValue.replace("ipp://", "http://")));
             } else if ("job-id".equals(attr.getName())) {
@@ -147,7 +177,6 @@ public class IppGetJobAttributesOperation extends IppOperation {
         }
       }
     }
-
     // IppResultPrinter.print(result);
     return job;
   }
